fixed overflow bug on puzzle.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -62,7 +62,7 @@ body.controller-games {
       height: 100%;
       width: 100%;
       display: block;
-      overflow: auto;
+      overflow: hidden;
     }
     .pencil-container {
       padding-top: 2%;
